Fixed layout problems in the left-hand column
Issue #62 https://github.com/fmstephe/location_server/issues/62

--- a/exec/example/html/tankwars/css/standard.css
+++ b/exec/example/html/tankwars/css/standard.css
@@ -40,17 +40,10 @@
 	padding: 0px;
 }
 
-.nowrap-column {
-	float: right;
+.nowrap {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	width: 50%;
-}
-
-.wrap-column {
-	float: right;
-	width: 50%;
 }
 
 .comment-column {
